--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
     --background-main: #f5f2fd;
+    --dmode-background-main: rgb(49, 48, 48);
     --background-dark: #cec2ea;
     --background-card: #fff;
     --button: #f1586c;
@@ -64,7 +65,7 @@ header {
 
 .link {
     display: flex;
-    gap: 15px;
+    gap: 10px;
     align-items: center;
 }
 
@@ -101,5 +102,16 @@ a {
     padding: 5px 50px;
     box-shadow: 4px 6px 10px var(--button-shadow);
 
+}
+
+.dark-mode-symbol {
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+}
+
+.dark-mode-symbol:hover {
+    transform: rotate(180deg);
+    translate: 5px;
+    height: 40px;
 }
 
