--- a/index.css
+++ b/index.css
@@ -12,11 +12,11 @@
 body {
     margin: 0;
     padding: 0;
+    /* background: #f7f7f8; */
+
 }
 
-.container {
-    
-}
+
 
 header {
     background: var(--background-card);
@@ -24,19 +24,16 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-
-@media screen and (max-width: 1000px) {
-    header {
-        justify-content: center;
-    }
+    position: fixed;
+    width: 100vw;
+    gap: 10px 50px;
 }
 
 .logo-area {
     display: flex;
     gap: 20px;
     align-items: center;
-    padding: 20px 100px;
+    padding: 20px 10px 20px 100px;
     /* margin: 0 50px; */
 }
 
@@ -53,9 +50,9 @@ header {
 
 .link-area {
     display: flex;
-    padding: 20px 100px;
+    padding: 20px 100px 20px 10px;
     align-items: center;
-    gap: 50px;
+    gap: 40px;
 }
 
 .link-area img {
@@ -98,6 +95,13 @@ a {
     transition: all 0.3s ease-in-out;
 }
 
+.link-button.add-book-button{
+    background: #7761ab;
+    color: var(--background-card);
+    
+
+}
+
 .link-button:hover {
     padding: 5px 50px;
     box-shadow: 4px 6px 10px var(--button-shadow);
@@ -115,3 +119,51 @@ a {
     height: 40px;
 }
 
+/* main {
+    background: #f5f2fd;
+} */
+
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    justify-items: stretch;
+    gap: 50px;
+    padding: 50px 100px;
+    padding-top: 150px;
+}
+
+.card {
+    height: 400px;
+    max-width: 350px;
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    background: var(--background-dark);
+    box-shadow: 3px 3px 4px #beb4d7;
+
+}
+
+@media screen and (max-width: 1100px) {
+    header {
+        justify-content: center;
+    }
+
+    .logo-area {
+        padding: 20px;
+    }
+
+    .link-text {
+        display: none;
+    }
+
+    .link-area {
+        gap: 25px;
+        padding: 20px 20px;
+    }
+
+    .link-button {
+        font-size: 1.2rem;
+        font-weight: 600;
+        padding: 5px 12px;
+        border-radius: 10px;
+    }
+}
