--- a/index.css
+++ b/index.css
@@ -71,6 +71,7 @@ header {
     font-weight: 600;
     margin: 0;
     transition: all 0.2s ease-in-out;
+    cursor: pointer;
 }
 
 .link-text:hover {
@@ -98,12 +99,10 @@ a {
 .link-button.add-book-button{
     background: #7761ab;
     color: var(--background-card);
-    
-
 }
 
 .link-button:hover {
-    padding: 5px 50px;
+    padding: 8px 30px;
     box-shadow: 4px 6px 10px var(--button-shadow);
 
 }
@@ -129,7 +128,7 @@ a {
     justify-items: stretch;
     gap: 50px;
     padding: 50px 100px;
-    padding-top: 150px;
+    padding-top: 200px;
 }
 
 .card {
