--- a/index.css
+++ b/index.css
@@ -1,18 +1,19 @@
 :root{
     font-family: 'Poppins', sans-serif;
     font-size: 16px;
-    --background-main: #f5f2fd;
+    --background-main: #f7f5ff;
     --dmode-background-main: rgb(49, 48, 48);
     --background-dark: #cec2ea;
     --background-card: #fff;
     --button: #f1586c;
     --button-shadow: #bea9ee;
+    --button-add: #7761ab;
 }
 
 body {
     margin: 0;
     padding: 0;
-    /* background: #f7f7f8; */
+    background: #f7f7f8;
 
 }
 
@@ -136,10 +137,87 @@ a {
     max-width: 350px;
     border-top-left-radius: 50px;
     border-bottom-right-radius: 50px;
-    background: var(--background-dark);
+    background: var(--background-main);
+    border: 2px solid rgb(230, 230, 230);
     box-shadow: 3px 3px 4px #beb4d7;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    /* justify-content: flex-start; */
+    /* align-items: center; */
+    padding: 20px;
+}
+
+.media-image {
+    object-fit: cover;
+    height: 150px;
+    border-radius: 10px;
+    /* filter: grayscale(100%); */
+}
+
+.book-name,
+.author,
+.pages {
+    font-weight: 500;
+    font-size: 1rem;
+    margin: 12px 0;
+}
+
+.details span {
+    font-weight: bold;
+    white-space: pre;
+    font-size: 0.95rem;
+}
+
+hr {
+    border: 1px solid rgb(215, 215, 215);
+    margin: 12px 0;
+}
+
+.card-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.read-state {
+    background: var(--button-add);
+    border: none;
+    color: #fff;
+    border-radius: 5px;
+    padding: 0 15px;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 4px 4px 4px #beb4d7;
+}
+
+.unread-state {
+    background: var(--button);
+    border: none;
+    color: #fff;
+    border-radius: 5px;
+    padding: 0 15px;
+    font-size: 1rem;
+    font-weight: bold;
+    transition: all 0.3s ease-in-out;
+    box-shadow: 3px 3px 4px #beb4d7;
+}
+
+.read-state:hover,
+.unread-state:hover {
+    padding: 0 25px;
+}
+
+.delete {
+    width: 30px;
 
 }
+
+
+
+
+
+
 
 @media screen and (max-width: 1100px) {
     header {
