--- a/index.css
+++ b/index.css
@@ -163,6 +163,7 @@ a {
     margin: 12px 0;
 }
 
+
 .details span {
     font-weight: bold;
     white-space: pre;
@@ -210,7 +211,15 @@ hr {
 
 .delete {
     width: 30px;
+    transition: all 0.5s ease-in-out;
+    cursor: pointer;
+    /* color: #4e4e50; */
+}
 
+.delete:hover {
+    transform: rotate(360deg) scale(1.3);
+    translate: 5px;
+    
 }
 
 
