--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@
     --button: #f1586c;
     --button-shadow: #bea9ee;
     --button-add: #7761ab;
+    --popup: #f0eef1;
 }
 
 body {
@@ -16,7 +17,16 @@ body {
     background: #f7f7f8;
 }
 
-
+.glass {
+    visibility: hidden;
+    display: block;
+    height: 100vh;
+    width: 100vw;
+    background: rgb(37, 37, 37);
+    opacity: 0.7;
+    position: absolute;
+    z-index: 2;
+}
 
 header {
     background: var(--background-card);
@@ -85,7 +95,7 @@ a {
     font-size: 1.5rem;
     font-weight: 600;
     padding: 5px 30px;
-    border-radius: 15px;
+    border-radius: 5px;
     border: none;
     background: var(--button);
     color: var(--background-card);
@@ -116,11 +126,11 @@ a {
 }
 
 
-
 .card-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     justify-content: center;
+    justify-items: center;
     gap: 50px;
     padding: 50px 100px;
     padding-top: 200px;
@@ -129,9 +139,9 @@ a {
 .card {
     height: 400px;
     max-width: 300px;
-    border-top-left-radius: 50px;
-    border-bottom-right-radius: 50px;
-    background: var(--background-main);
+    border-top-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    background: var(--popup);
     border: 2px solid rgb(230, 230, 230);
     box-shadow: 3px 3px 4px #beb4d7;
     display: flex;
@@ -143,7 +153,7 @@ a {
 .media-image {
     object-fit: cover;
     height: 150px;
-    border-radius: 10px;
+    border-radius: 5px;
 }
 
 .book-name,
@@ -208,10 +218,89 @@ hr {
 
 .delete:hover {
     transform: rotate(360deg) scale(1.3);
-    translate: 5px;
+    translate: 5px; 
+}
+
+.add-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-align: center;
+    margin: 20px 0;
+    color: rgb(49, 48, 48);
+}
+
+.pop-up {
+    display: flex;
+    flex-direction: column;
+    width: 300px;
+    position: absolute;
+    z-index: 4;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    background: var(--popup);
+    padding: 20px;
+    border-radius: 10px;
+    gap: 15px;
+    visibility: hidden;
+    transition: transform 0.3s ease-in-out;
+}
+
+.popup-inputs {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+input:focus {
+    outline: 1px solid var(--button-add);
+  }
+
+input[type="text"],
+input[type="number"] {
+    border: none;
+    font-size: 1.2rem;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+input[type="radio"] {
+    accent-color: var(--button-add);
     
 }
 
+
+.user-read-state p {
+    font-size: 1.2rem;
+    font-weight: 600;
+    margin: 10;
+    text-align: center;
+    color: rgb(49, 48, 48);
+
+}
+
+.user-read-state label {
+    font-size: 1.3rem;
+    
+}
+
+.pop-up button {
+    font-size: 1.3rem;
+    padding: 10px 0;
+    background: var(--button-add);
+    color: var(--background-card);
+    font-weight: bold;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 2px 4px 4px var(--button-shadow);
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+}
+
+.pop-up button:hover {
+    background: #5d488d;
+    padding: 15px 0;
+}
 
 @media screen and (max-width: 1100px) {
     header {
