--- a/index.css
+++ b/index.css
@@ -109,7 +109,8 @@ a {
 }
 
 .link-button:hover {
-    padding: 8px 30px;
+    /* padding: 8px 30px; */
+    border-radius: 30px;
     box-shadow: 4px 6px 10px var(--button-shadow);
 
 }
@@ -129,7 +130,7 @@ a {
 .card-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    justify-content: center;
+    /* justify-content: start; */
     justify-items: center;
     gap: 50px;
     padding: 50px 100px;
@@ -141,7 +142,7 @@ a {
     max-width: 300px;
     border-top-left-radius: 30px;
     border-bottom-right-radius: 30px;
-    background: var(--popup);
+    background: var(--background-main);
     border: 2px solid rgb(230, 230, 230);
     box-shadow: 3px 3px 4px #beb4d7;
     display: flex;
@@ -257,7 +258,8 @@ input:focus {
   }
 
 input[type="text"],
-input[type="number"] {
+input[type="number"],
+input[type="url"] {
     border: none;
     font-size: 1.2rem;
     padding: 10px;
@@ -266,6 +268,8 @@ input[type="number"] {
 
 input[type="radio"] {
     accent-color: var(--button-add);
+    width: 1rem;
+    height: 1rem;
     
 }
 
@@ -295,11 +299,12 @@ input[type="radio"] {
     box-shadow: 2px 4px 4px var(--button-shadow);
     margin-bottom: 10px;
     border: 1px solid #ccc;
+    transition: all 0.3s ease-in-out;
 }
 
 .pop-up button:hover {
     background: #5d488d;
-    padding: 15px 0;
+    border-radius: 30px;
 }
 
 @media screen and (max-width: 1100px) {
