--- a/index.css
+++ b/index.css
@@ -152,6 +152,7 @@ a {
     gap: 5px;
     padding: 20px;
     transition: all 0.3s linear;
+    opacity: 1;
 }
 
 .newCard {
@@ -231,7 +232,7 @@ hr {
 }
 
 .delete:hover {
-    transform: rotate(360deg) scale(1.3);
+    transform: rotate(180deg) scale(1.3);
     translate: 5px; 
 }
 
@@ -318,6 +319,10 @@ input[type="radio"] {
 .pop-up button:hover {
     background: #5d488d;
     border-radius: 30px;
+}
+
+.zero-opacity {
+    opacity: 0.2;
 }
 
 @media screen and (max-width: 1100px) {
