--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ header {
     height: 30px;
 }
 
+
 .link,
 .dmode {
     display: flex;
@@ -120,6 +121,8 @@ a {
 .dark-mode-symbol {
     transition: all 0.5s ease-in-out;
     cursor: pointer;
+    pointer-events: none;
+    display: none;
 }
 
 .dark-mode-symbol:hover {
